k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: linktracker-uat
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: linktracker-uat
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
